# time

./: .flake8  .gitignore  November 2019.json  _dialogs.py  _utils.py  createEXE.cmd  dialogs.py  licenses.txt  packageRelease.cmd  pyproject.toml  requirements.txt  times.iss  times.py  times.spec  utils.py
.github/: dependabot.yml
.github/workflows/: python-app.yml  python-app3_11.yml  tag.yml
