[project]
name = "time"
version = "1.2.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jira==3.10.5",
    "keyring==25.7.0",
    "psutil==7.2.2",
    "pyinstaller==6.19.0",
    "pyside6==6.10.2",
    "pywin32==311",
]

[dependency-groups]
dev = [
    "flake8==7.3.0",
    "pytest==9.0.2",
    "pytest-qt==4.5.0",
    "ruff==0.15.1",
]

[tool.ruff]
line-length = 128

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "N802", "N803", "N806", "N815",  
      # PEP8 formatting - we stay on mixedCase for now
    "EM",  
      # I dont agree with them
    "TRY003",
      # generally a good idea but nothing I want to enforce (and in the way in my use case)
    "D203", "D212",
      # mutual exclusive rules to D211 and D212
    "COM812",
      # ruff advises against it
    "FBT",
      # there are valid use cases for using boolean arguments
    ]